--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= Wobble Wockets
+    title Wobble Wockets
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
