--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,9 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  .download
+    p Get to the Moon Base!
+    form(action="/sms", method="post")
+      input(type="text", name="phone", autofocus)
+      button(type="submit") Send
+
