--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,124 @@
+/*STYLES*/
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+   font-weight: 300;
+}
+h1, h2, h3 {
+  margin: 0.5em 0.1em 0.5em 0.1em;
+  line-height: 1.1em;
+  color: #222;
+}
+h1 {
+  font-size: 42px;
+  font-weight: 900;
+}
+h2 {
+  font-size: 36px;
+  font-weight: 700;
+}
+h3 {
+  font-size: 24px;
+  font-weight: 500;
+}
+p {
+  line-height: 1.5em;
+  margin-bottom: 0px;
+  font-size: 16px;
+  color: #444;
+}
+a {
+  color: #428bca;
+  text-decoration: none;
+}
+a:hover, a:focus {
+  color: #005580;
+  text-decoration: underline;
+}
+button {
+  background-color: #95a5a6;
+  color: #fff;
+  text-align: center;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  position: relative;
+  padding: 0.3em 1em;
 }
 
-a {
-  color: #00B7FF;
+header { background-color: #F1C40F; }
+footer { background-color: #E74C3C; }
+feature-green { background-color: #2ECC71; }
+
+/* FORMS */
+form {
+  margin-top: 20px;
+}
+
+label {
+  padding: 5px 0px 3px 0px;
+  display: block;
+}
+
+input, textarea {
+  border-radius: 3px;
+  border: 1px solid #ddd;
+  padding: 5px;
+  width: 100%;
+  max-width: 300px;
+}
+
+button {
+  background-color: #95a5a6;
+  color: #fff;
+  text-align: center;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  position: relative;
+  padding: 0.3em 1em;
+}
+button:hover { background-color: #7f8c8d; }
+button.primary { background-color: #3498db; }
+button.primary:hover { background-color: #2980b9; }
+
+/*LAYOUT*/
+
+.container {
+  max-width: 800px;
+  margin: auto;
+  padding: 20px;
+}
+
+.feature {
+  position: relative;
+  display: table;
+}
+.download {
+  width: 70%;
+  padding: 10px;
+  position: relative;
+  display: inline-block;
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+  display: table-cell;
+  vertical-align: middle;
+}
+.preview {
+  width: 30%;
+  padding: 10px;
+  display: inline-block;
+  postition: relative;
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+  display: table-cell;
+  vertical-align: middle;
+}
+.preview img {
+  width: 100%;
 }
