--- a/views/index.jade
+++ b/views/index.jade
@@ -11,6 +11,8 @@ block content
         img(src="/images/download-android.png")
       form(id="sms")
         input(type="text", name="phone", placeholder="Phone Number", autofocus)
-        button(type="submit") Send
+        button(type="submit") SMS Me The Link!
     .preview
-      img(src="http://placekitten.com/g/300/400")
+      .iphone
+        .demo
+          img(src="http://placekitten.com/g/243/432")
