--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,7 @@ h1, h2, h3 {
   margin: 0.5em 0.1em 0.5em 0.1em;
   line-height: 1.1em;
   color: #222;
+  text-align: center;
 }
 h1 {
   font-size: 42px;
@@ -47,13 +48,10 @@ button {
   padding: 0.3em 1em;
 }
 
-header { background-color: #F1C40F; }
-footer { background-color: #E74C3C; }
-feature-green { background-color: #2ECC71; }
-
 /* FORMS */
 form {
   margin-top: 20px;
+  width: 100%;
 }
 
 label {
@@ -62,15 +60,17 @@ label {
 }
 
 input, textarea {
+  font-size: 18px;
   border-radius: 3px;
   border: 1px solid #ddd;
   padding: 5px;
-  width: 100%;
-  max-width: 300px;
+  width: 300px;
+  margin: auto;
+  display: block;
 }
 
 button {
-  background-color: #95a5a6;
+  background-color: #2ecc71;
   color: #fff;
   text-align: center;
   font-size: 18px;
@@ -79,46 +79,51 @@ button {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   position: relative;
-  padding: 0.3em 1em;
+  padding: 0.5em 1.2em;
+  width: 200px;
+  display: block;
+  margin: 5px auto;
 }
-button:hover { background-color: #7f8c8d; }
+button:hover { background-color: #27ae60; }
+button:disabled { background-color: #95a5a6; }
 button.primary { background-color: #3498db; }
 button.primary:hover { background-color: #2980b9; }
 
+.dl-btn { padding: 3px; }
 /*LAYOUT*/
 
 .container {
-  max-width: 800px;
+  max-width: 900px;
   margin: auto;
-  padding: 20px;
-}
-
-.feature {
-  position: relative;
-  display: table;
+  padding: 10px;
 }
 .download {
-  width: 70%;
-  padding: 10px;
+  width: 60%;
+  min-width: 300px;
   position: relative;
   display: inline-block;
-  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-  box-sizing: border-box;         /* Opera/IE 8+ */
-  display: table-cell;
-  vertical-align: middle;
+  box-sizing: border-box;
+  vertical-align: top;
+  text-align: center;
 }
 .preview {
-  width: 30%;
-  padding: 10px;
+  width: 40%;
+  min-width: 300px;
   display: inline-block;
-  postition: relative;
-  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-  box-sizing: border-box;         /* Opera/IE 8+ */
-  display: table-cell;
-  vertical-align: middle;
+  margin-left: -2px;
+  vertical-align: top;
 }
-.preview img {
-  width: 100%;
+.iphone {
+  background: url('../images/iphone5.png') no-repeat;
+  width: 300px;
+  height: 613px;
+  background-size: cover;
+  position: relative;
+}
+.demo {
+  width: 243px;
+  height: 432px;
+  position: absolute;
+  top: 90px;
+  right: 30px;
 }
