success and error messages for form submission

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,6 +9,8 @@ block content
         img(src="/images/download-apple.png")
       a(href="#", class="dl-btn", id="download-android")
         img(src="/images/download-android.png")
+      p We'll text you the download link
+      #message
       form(id="sms")
         input(type="text", name="phone", placeholder="Phone Number", autofocus)
         button(type="submit") SMS Me The Link!
