--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,10 +48,29 @@ button {
   padding: 0.3em 1em;
 }
 
+#message {
+  border-radius: 5px;
+  color: #fff;
+  font-size: 16px;
+  display: inline-block;
+  margin: auto;
+  padding: 5px 20px;
+  display: none;
+}
+
+.error {
+  border: 1px solid #c0392b;
+  background-color: rgba(231, 76, 60, 0.6);
+}
+.success {
+  border: 1px solid #27ae60;
+  background-color: rgba(46, 204, 113, 0.6);
+}
+
 /* FORMS */
 form {
-  margin-top: 20px;
   width: 100%;
+  margin: 10px;
 }
 
 label {
