--- a/public/stylesheets/custom.styl
+++ b/public/stylesheets/custom.styl
@@ -1,52 +1,40 @@
 /*STYLES*/
-body {
-   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-   font-weight: 300;
-}
-h1, h2, h3 {
-  margin: 0.5em 0.1em 0.5em 0.1em;
-  line-height: 1.1em;
-  color: #222;
-  text-align: center;
-}
-h1 {
-  font-size: 42px;
-  font-weight: 900;
-}
-h2 {
-  font-size: 36px;
-  font-weight: 700;
-}
-h3 {
-  font-size: 24px;
-  font-weight: 500;
-}
-p {
-  line-height: 1.5em;
-  margin-bottom: 0px;
-  font-size: 16px;
-  color: #444;
-}
-a {
-  color: #428bca;
-  text-decoration: none;
-}
-a:hover, a:focus {
-  color: #005580;
-  text-decoration: underline;
-}
-button {
-  background-color: #95a5a6;
-  color: #fff;
-  text-align: center;
-  font-size: 18px;
-  border: none;
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  position: relative;
-  padding: 0.3em 1em;
-}
+// body {
+//    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+//    font-weight: 300;
+// }
+// h1, h2, h3 {
+//   margin: 0.5em 0.1em 0.5em 0.1em;
+//   line-height: 1.1em;
+//   color: #222;
+//   text-align: center;
+// }
+// h1 {
+//   font-size: 42px;
+//   font-weight: 900;
+// }
+// h2 {
+//   font-size: 36px;
+//   font-weight: 700;
+// }
+// h3 {
+//   font-size: 24px;
+//   font-weight: 500;
+// }
+// p {
+//   line-height: 1.5em;
+//   margin-bottom: 0px;
+//   font-size: 16px;
+//   color: #444;
+// }
+// a {
+//   color: #428bca;
+//   text-decoration: none;
+// }
+// a:hover, a:focus {
+//   color: #005580;
+//   text-decoration: underline;
+// }
 
 #message {
   border-radius: 5px;
@@ -67,48 +55,6 @@ button {
   background-color: rgba(46, 204, 113, 0.6);
 }
 
-/* FORMS */
-form {
-  width: 100%;
-  margin: 10px;
-}
-
-label {
-  padding: 5px 0px 3px 0px;
-  display: block;
-}
-
-input, textarea {
-  font-size: 18px;
-  border-radius: 3px;
-  border: 1px solid #ddd;
-  padding: 5px;
-  width: 300px;
-  margin: auto;
-  display: block;
-}
-
-button {
-  background-color: #2ecc71;
-  color: #fff;
-  text-align: center;
-  font-size: 18px;
-  border: none;
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  position: relative;
-  padding: 0.5em 1.2em;
-  width: 200px;
-  display: block;
-  margin: 5px auto;
-}
-button:hover { background-color: #27ae60; }
-button:disabled { background-color: #95a5a6; }
-button.primary { background-color: #3498db; }
-button.primary:hover { background-color: #2980b9; }
-
-.dl-btn { padding: 3px; }
 /*LAYOUT*/
 
 .container {
@@ -116,6 +62,9 @@ button.primary:hover { background-color: #2980b9; }
   margin: auto;
   padding: 10px;
 }
+
+
+// Old container
 .download {
   width: 60%;
   min-width: 300px;
