--- a/public/stylesheets/custom.styl
+++ b/public/stylesheets/custom.styl
@@ -1,58 +1,27 @@
 /*STYLES*/
-// body {
-//    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-//    font-weight: 300;
-// }
-// h1, h2, h3 {
-//   margin: 0.5em 0.1em 0.5em 0.1em;
-//   line-height: 1.1em;
-//   color: #222;
-//   text-align: center;
-// }
-// h1 {
-//   font-size: 42px;
-//   font-weight: 900;
-// }
-// h2 {
-//   font-size: 36px;
-//   font-weight: 700;
-// }
-// h3 {
-//   font-size: 24px;
-//   font-weight: 500;
-// }
-// p {
-//   line-height: 1.5em;
-//   margin-bottom: 0px;
-//   font-size: 16px;
-//   color: #444;
-// }
-// a {
-//   color: #428bca;
-//   text-decoration: none;
-// }
-// a:hover, a:focus {
-//   color: #005580;
-//   text-decoration: underline;
-// }
+
+.download {
+  margin: 5px;
+}
 
 #message {
   border-radius: 5px;
-  color: #fff;
   font-size: 16px;
   display: inline-block;
-  margin: auto;
+  margin: 10px auto;
   padding: 5px 20px;
   display: none;
 }
 
 .error {
-  border: 1px solid #c0392b;
-  background-color: rgba(231, 76, 60, 0.6);
+  border: 1px solid #eed3d7;
+  background-color: #f2dede;
+  color: #b94a48;
 }
 .success {
-  border: 1px solid #27ae60;
-  background-color: rgba(46, 204, 113, 0.6);
+  border: 1px solid #d6e9c6;
+  background-color: #dff0d8;
+  color: #468847;
 }
 
 /*LAYOUT*/
@@ -61,37 +30,4 @@
   max-width: 900px;
   margin: auto;
   padding: 10px;
-}
-
-
-// Old container
-.download {
-  width: 60%;
-  min-width: 300px;
-  position: relative;
-  display: inline-block;
-  box-sizing: border-box;
-  vertical-align: top;
-  text-align: center;
-}
-.preview {
-  width: 40%;
-  min-width: 300px;
-  display: inline-block;
-  margin-left: -2px;
-  vertical-align: top;
-}
-.iphone {
-  background: url('../images/iphone5.png') no-repeat;
-  width: 300px;
-  height: 613px;
-  background-size: cover;
-  position: relative;
-}
-.demo {
-  width: 243px;
-  height: 432px;
-  position: absolute;
-  top: 90px;
-  right: 30px;
 }
