--- a/public/stylesheets/custom.styl
+++ b/public/stylesheets/custom.styl
@@ -4,6 +4,14 @@
   margin: 5px;
 }
 
+#download-apple {
+  background-color: #000
+}
+
+#download-android {
+  background-color: #A4C639
+}
+
 #message {
   border-radius: 5px;
   font-size: 16px;
