--- a/public/stylesheets/custom.styl
+++ b/public/stylesheets/custom.styl
@@ -1,41 +1,35 @@
 /*STYLES*/
 
-.download {
-  margin: 5px;
-}
+.download
+  margin: 5px
 
-#download-apple {
+#download-apple
   background-color: #000
-}
 
-#download-android {
+#download-android
   background-color: #A4C639
-}
 
-#message {
-  border-radius: 5px;
-  font-size: 16px;
-  display: inline-block;
-  margin: 10px auto;
-  padding: 5px 20px;
-  display: none;
-}
+#message
+  border-radius: 5px
+  font-size: 16px
+  display: inline-block
+  margin: 10px auto
+  padding: 5px 20px
+  display: none
 
-.error {
-  border: 1px solid #eed3d7;
-  background-color: #f2dede;
-  color: #b94a48;
-}
-.success {
-  border: 1px solid #d6e9c6;
-  background-color: #dff0d8;
-  color: #468847;
-}
+.error
+  border: 1px solid #eed3d7
+  background-color: #f2dede
+  color: #b94a48
+
+.success
+  border: 1px solid #d6e9c6
+  background-color: #dff0d8
+  color: #468847
 
 /*LAYOUT*/
 
-.container {
-  max-width: 900px;
-  margin: auto;
-  padding: 10px;
-}
+.container
+  max-width: 900px
+  margin: auto
+  padding: 10px
