--- a/public/stylesheets/custom.styl
+++ b/public/stylesheets/custom.styl
@@ -1,7 +1,17 @@
 /*STYLES*/
 
+h1, h2, p
+  font-family: 'Open Sans Condensed', sans-serif
+
+h1
+  font-size: 42px
+p
+  font-size: 18px
+
 .download
   margin: 5px
+  width: 100%
+  max-width: 300px
 
 #download-apple
   background-color: #000
@@ -33,3 +43,5 @@
   max-width: 900px
   margin: auto
   padding: 10px
+  text-align: center
+  box-sizing: border-box
