--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Open\+Sans\+Condensed:300,700)
 @import 'pure-styl'
 @import 'pure-grid'
 @import 'device'
